--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "docs"
 version = "0.1.0"
-description = "The modern Python ASGI Framework for data-driven Applications and Services"
+description = "The Python framework for Data Applications"
 license = {file = "LICENSE"}
 authors = [
     {name = "Rodolphe Barbanneau"},
@@ -38,9 +38,6 @@ reference = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["scripts"]
 
 [tool.hatch.envs.default]
 installer = "uv"
