--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ build-backend = "hatchling.build"
 [tool.hatch.metadata]
 allow-direct-references = true
 
+[tool.hatch.build.targets.wheel]
+packages = ["scripts"]
+
 [tool.hatch.envs.default]
 installer = "uv"
 path = ".venv"
