--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
 site_name: Plateforme Docs
 site_description: The modern Python ASGI Framework for data-driven Applications and Services
 site_author: Plateforme
-site_url: https://plateformeio.github.io/site
+site_url: https://docs.plateforme.io
 copyright: Plateforme, All rights reserved
 
 repo_name: plateformeio/plateforme
 repo_url: https://github.com/plateformeio/plateforme
-edit_uri: blob/main/docs/
+edit_uri: https://github.com/plateformeio/docs/blob/main/docs
 
 docs_dir: docs
 site_dir: build
