--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
     "mkdocs",
     "mkdocs-autorefs",
     "mkdocs-awesome-pages-plugin",
+    "mkdocs-git-authors-plugin",
+    "mkdocs-git-committers-plugin-2",
+    "mkdocs-git-revision-date-localized-plugin",
     "mkdocs-macros-plugin",
     "mkdocs-material[imaging] @ git+https://{env:GH_TOKEN:?}@github.com/squidfunk/mkdocs-material-insiders.git",
     "mkdocs-redirects",
